# ema-wiki

./: .gitignore  404.html  Literals.html  NPlusKPatterns.html  OverloadedStrings.html  Patterns.html  README.md  ViewPatterns.html  dir1.html  dir2.html  ema-wiki.cabal  flake.nix  hie.yaml  index.html  stack.yaml
.github/workflows/: publish.yaml
Literals/: OverloadedStrings.html
Patterns/: NPlusKPatterns.html  ViewPatterns.html
config/: algolia_doc_search.json
content/: 404.md  Literals.md  NPlusKPatterns.md  OverloadedStrings.md  Patterns.md  ViewPatterns.md  index.md
content/Literals/: OverloadedStrings.md
content/Patterns/: NPlusKPatterns.md  ViewPatterns.md
content/dir1/: foo.md
dir1/: foo.html
dir2/: bar.html
src/: Main.hs
src/EmaWiki/: Config.hs  Model.hs  Pandoc.hs  Render.hs
