cabal-version:      2.4
name:               ema-wiki
version:            0.1.0.0
license:            AGPL-3.0-only
copyright:          2021 Sridhar Ratnakumar
maintainer:         jason.whittle@gmail.com
author:             Jason Whittle
bug-reports:        https://github.com/whittle/ema-wiki/issues
category:           Web
synopsis:           A wiki-alike static site generator
description:
  See README at <https://github.com/whittle/ema-wiki#readme>

extra-source-files:
  LICENSE
  README.md

executable ema-wiki
  build-depends:
    , aeson
    , async
    , base
    , blaze-html
    , blaze-markup
    , containers
    , data-default
    , directory
    , ema                 >=0.2
    , envparse
    , filepath
    , lvar
    , monad-logger
    , neat-interpolation
    , pandoc-types
    , relude
    , shower
    , tagged
    , text
    , time
    , unliftio

  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns

  default-extensions:
    FlexibleContexts
    FlexibleInstances
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    ViewPatterns

  main-is:            Main.hs
  hs-source-dirs:     src
  default-language:   Haskell2010

  other-modules:
      EmaWiki.Config
    , EmaWiki.Model
    , EmaWiki.Pandoc
    , EmaWiki.Render
